overflow bug solved

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,4 +1,5 @@
 .About{
+    overflow-x: hidden;
     width:100vw;
     display: flex;
     background-color: #000;
