--- a/src/components/cover/cover.scss
+++ b/src/components/cover/cover.scss
@@ -1,5 +1,5 @@
 .Cover{
-    height:80vh;
+    height:90vh;
     width:100vw;
     position: relative;
     display: flex;
@@ -17,22 +17,30 @@
             position: relative;
             width:60%;
             height:100%;
-            font-size: 4rem;
             padding:3rem;
-            h2{
-                
+            .highlighter{
+                font-size: 3rem;
+                font-weight: bolder;
+                display: block;
                 color:#fff;
                 span{
+                    font-size: 3rem;
+                    display: inline;
                     color: #CBD728;
                 }
             }
-            h3{
+            .sub{
+                margin: 1rem;
+                display: block;
                 font-size: 2rem;
                 color:#CBD728;
             }
-            h6{
+            span{
+                margin:1rem ;
+                display: block;
                 color:#fff;
                 font-size: 2rem;
+                margin-bottom: 2rem;
             }
             .RegisterBtn{
                 position: relative;
@@ -45,25 +53,63 @@
                 border:none;
                 cursor: pointer;
                 z-index: 11;
-                span{
+                ::after{
                     content: "";
                     position: absolute;
-                    top:0;
+                    
+                    left:0;
                     display: block;
                     width:0;
                     height:100%;
                     background-color:#CBD728;
-                    border-radius: inherit;
+                    border-radius: 20px;
                     transition: all 0.3s ease-in-out;
-                    z-index: -10;
+                    z-index: 100;
                 }
                 &:hover{
-                    color: #3824CD;
-                    span{
+                    ::after{
+                        
                         width:100%;
                         top:0;
                     }
                 }
+            }
+        }
+    }
+}
+
+
+
+///////============Resdesgin=========///////////
+@media (max-width:840px){
+    .Cover{
+        .dummy_Cover{
+            .desc_Container{
+                width:100%;
+                height:100%;
+                padding: 2.5rem;
+                .highlighter{
+                   font-size: 3rem;
+                   span{
+                    margin-left: 0;
+                    font-size: inherit;
+                   } 
+                }
+                .sub{
+                    font-size: 1.3rem;
+                }
+                span{
+                    font-size: 1.3rem;
+                }
+            }
+        }
+    }
+}
+@media (max-width:370px){
+    .cover{
+        .dummy_Cover{
+            .desc_Container{
+                padding: 1rem;
             }
         }
     }
